Index,Gallary,RTI change

--- a/index.html
+++ b/index.html
@@ -337,11 +337,10 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+            <span class="logo"><img src="img/WBSCTE.jpeg" alt="" style="border-radius: 20px;"></span>
             <div class="row">
                 <div class="col-sm-4 address">
-                    <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College,
-                    Sector-28, Gandhinagar, Gujarat - 382028
+                    <strong>Address : </strong>P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409
                 </div>
                 <div class="col-sm-4 links">
                     <div>
@@ -367,8 +366,8 @@
                     </div>
                 </div>
                 <div class="col-sm-4 footer-social">
-                    <a href="#!"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
-                    <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                    <a href="https://www.facebook.com/groups/kplovesu"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
+                    <a href="https://github.com/Sourodeep01001"><i class="fa fa-github" aria-hidden="true"
                                                           title="Github Group"></i></a>
                     <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                     <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
