about & Student_coener edit

--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | About</title>
+    <title>KALNA POLYTECHNIC | About</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/WBSCTE.jpeg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,20 +22,21 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="img/WBSCTE.jpeg" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>KLANA POLYTECHNIC</h5>
+                                    <h5 class="primary-color">West Bengal</h5>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="header-links">
-                        <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
-                        <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                        <a id="email_icon" href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+91-77-97286993" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
+                        <a id="email_icon" href="#" data-toggle="popover" title="Email" data-content="chakrabortysourodeep16@gmail.com" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a id="email_icon" href="#" data-toggle="popover" title="Website" data-content="www.kalnapolytechnic.org" data-placement="bottom"><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a>
 
                     </div>
                 </div>
@@ -137,20 +138,18 @@
             <!-- Contents starts here -->
             <div class="content">
                 <h1>About us</h1>
-                <p>Indian Institute of Information Technology Vadodara (IIIT-V) is set up by the Ministry of Human Resource Development (MHRD), Government Of India under Public Private Partnership (PPP) model. The partners in this project are Government Of India, Government of Gujarat, Gujarat Energy Research and Management Institute, Gujarat State Fertilizers and Chemicals and Tata Consultancy Services. The Institute was established in the year 2013. DA-IICT Gandhinagar has been entrusted the responsibility of mentoring IIIT Vadodara. At present, IIIT-V is operating from its temporary premises at Government Engineering College (Gandhinagar) till the time its new campus is made operational at Vadodara, Gujarat.</p>
-                <p>Indian Institute of Information Technology, Vadodara - is established to cater to the emerging needs and opportunities and meet economic challenges being thrown by the incessant IT revolution. It is setup as a Not for Profit Public Private Partnership (PPP) model. It is a major initiative taken by Government of Gujarat to harness the multifarious dimension of IT Industry. The Government of Gujarat has lent support to the Institute by providing 50 acres of land and Building. It is aimed at providing future candidates who shall become a precursor in the field of IT. A Governing Council consisting of distinguished people from academia, industry and government preside over the governance of the institute.</p>
-                <p>The Institute aims at evolving strong research programmes in a plethora of areas where IT shall provide a common link with profound emphasis on development of technology and its application.</p>
+                <p>Kalna Polytechnic is a Government Polytechnic Institution under the administrative control of Directorate of Technical Education and Training, Govt. of West Bengal. At present 3 Diploma courses viz., Civil Engineering, Electronics and Telecommuniocation Engineering and Computer Science and Technology are offered. This is situated in the District of Burdwan within the Kalna Sub-division area about 3 KM from Ambika-Kalna Railway station and at the northern fringe of The ancient heritage Temple town of Kalna. This Polytechnic was established in the year 2000 and the first admission took place in Civil Engineering and Electronics and Telecommuniocation Engineering at the diploma level in the year 2001. Other branch of Engineering like Computer Science and Technology was introduced in the year 2007 as the institute grew up in size and prospereity. See less</p>
             </div>
         </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+                <span class="logo"><img src="img/WBSCTE.jpeg" alt="" style="border-radius: 20px;"></span>
                 <div class="row">
                     <div class="col-sm-4 address">
                         <strong>College name:</strong> Kalna Polytechnic College <br>
                         <strong>Address : </strong>P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409
-                         <!-- Source: https://www.icbse.com -->
+                         
                     </div>
                     <div class="col-sm-4 links">
                         <div>
@@ -176,9 +175,9 @@
                         </div>
                     </div>
                     <div class="col-sm-4 footer-social">
-                        <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
+                        <a href="https://www.facebook.com/groups/kplovesu"><i class="fa fa-facebook" aria-hidden="true"
                                         title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                        <a href="https://github.com/Sourodeep01001"><i class="fa fa-github" aria-hidden="true"
                                                               title="Github Group"></i></a>
                         <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                         <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
