--- a/faculty.html
+++ b/faculty.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | Faculty</title>
+    <title>KALNA POLYTECHNIC | Faculty</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/WBSCTE.jpeg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,20 +22,21 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="img/WBSCTE.jpeg" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>KLANA POLYTECHNIC</h5>
+                                    <h5 class="primary-color">West Bengal</h5>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="header-links">
-                        <a href="#" data-toggle="popover" title="Address" data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
-                        <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                        <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Address" data-content="P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Phone No." data-content="+91-77-97286993" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Email" data-content="chakrabortysourodeep16@gmail.com" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Email" data-content="www.kalnapolytechnic.org" data-placement="bottom"><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -127,6 +128,7 @@
                                 </li>
                                 <li><a href="career.html">Career</a></li>
                                 <li><a href="gallery.html">Photo Gallery</a></li>
+                                <li><a href="popupLogin page.html">Login</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
@@ -313,10 +315,10 @@
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+                <span class="logo"><img src="img/WBSCTE.jpeg" alt="" style="border-radius: 20px;"></span>
                 <div class="row">
                     <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028
+                        <strong>Address : </strong>P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409
                     </div>
                     <div class="col-sm-4 links">
                         <div>
@@ -342,9 +344,9 @@
                         </div>
                     </div>
                     <div class="col-sm-4 footer-social">
-                        <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
+                        <a href="https://www.facebook.com/groups/kplovesu"><i class="fa fa-facebook" aria-hidden="true"
                                         title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                        <a href="https://github.com/Sourodeep01001"><i class="fa fa-github" aria-hidden="true"
                                                               title="Github Group"></i></a>
                         <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                         <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
