--- a/gallery.html
+++ b/gallery.html
@@ -137,6 +137,7 @@
                             </li>
                             <li><a href="career.html">Career</a></li>
                             <li class="active"><a href="gallery.html">Photo Gallery</a></li>
+                            <li><a href="popupLogin page.html">Login</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
