--- a/rti.html
+++ b/rti.html
@@ -127,6 +127,7 @@
                                 </li>
                                 <li><a href="career.html">Career</a></li>
                                 <li><a href="gallery.html">Photo Gallery</a></li>
+                                <li><a href="popupLogin page.html">Login</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
