--- a/index.html
+++ b/index.html
@@ -65,20 +65,13 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="directors_message.html">Director's Message</a></li>
-                                    <li><a href="bog.html">Board of Governors</a></li>
                                     <li><a href="society_members.html">Society Members</a></li>
                                     <li><a href="academic_council.html">Academic Council</a></li>
                                     <li><a href="finance_committee.html">Finance Committee</a></li>
                                     <li><a href="rti.html">RTI</a></li>
-                                    <li><a href="pdf/MOU.pdf">MOU</a></li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                            <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                            <li><a href="linkages/germi.html">GERMI</a></li>
-                                            <li><a href="linkages/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -88,20 +81,12 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">B.Tech</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="btech_cse.html">CSE</a></li>
-                                            <li><a href="btech_it.html">IT</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Tech</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="mtech_cse.html">CSE</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="phd.html">Ph.D</a></li>
-                                    <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
+                                    <li><a href="#!">Academic Calender</a></li>
 
                                 </ul>
                             </li>
@@ -109,16 +94,13 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="btech_admission.html">B.Tech</a></li>
-                                    <li><a href="mtech_admission.html">M.Tech</a></li>
-                                    <li><a href="phd_admission.html">Ph.D</a></li>
+                                    <li><a href="#!">Diploma</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="faculty.html">Faculty</a></li>
-                                    <li><a href="visiting_faculty.html">Visiting Faculty</a></li>
                                     <li><a href="staff.html">Staff</a></li>
                                 </ul>
                             </li>
@@ -133,7 +115,6 @@
                                     <li><a href="invited_talks.html">Invited Talks</a></li>
                                 </ul>
                             </li>
-                            <li><a href="career.html">Career</a></li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
                             <li><a href="popupLogin page.html">Login</a></li>
                         </ul>
