--- a/library.html
+++ b/library.html
@@ -81,6 +81,9 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                         <ul class="dropdown-menu">
+                                            <li><a href="#!">CSE</a></li>
+                                            <li><a href="#!">ETC</a></li>
+                                            <li><a href="#!">CE</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
