add wbscte official website

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="btech_admission.html">Diploma</a></li>
+                                        <li><a href="https://webscte.co.in/">Diploma</a></li>
                                     </ul>
                                 </li>
                                 <li>
