--- a/admissions.html
+++ b/admissions.html
@@ -96,7 +96,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="btech_admission.html">Diploma</a></li>
+                                    <li><a href="https://webscte.co.in/">Diploma</a></li>
                                 </ul>
                             </li>
                             <li>
