--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="#!">Diploma</a></li>
+                                    <li><a href="https://webscte.co.in/">Diploma</a></li>
                                 </ul>
                             </li>
                             <li>
