--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="#!">CSE</a></li>
+                                                <li><a href="#!">CST</a></li>
                                                 <li><a href="#!">ETC</a></li>
                                                 <li><a href="#!">CE</a></li>
                                             </ul>
@@ -105,7 +105,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="#!">Diploma</a></li>
+                                        <li><a href="https://webscte.co.in/">Diploma</a></li>
                                     </ul>
                                 </li>
                                 <li>
