--- a/student_corner.html
+++ b/student_corner.html
@@ -74,7 +74,7 @@
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="btech_cse.html">CST</a></li>
+                                                <li><a href="https://webscte.co.in/">CST</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
