Commit all done for today!!!!

--- a/admissions.html
+++ b/admissions.html
@@ -96,7 +96,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="https://webscte.co.in/">Diploma</a></li>
+                                    <li><a href="https://webscte.co.in/">Click Hare To Go WBSCTE official Website</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -130,8 +130,8 @@
         <br/><br/>
         <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="https://webscte.co.in/">
-                    Diploma. Admissions
+                <a href="https://exam.webscte.co.in/JEXPO-VOCLET">
+                    Diploma. Admissions through JEXPO & VOCLET
                 </a>
             </div>
             </div>
