--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="https://webscte.co.in/">Diploma</a></li>
+                                        <li><a href="https://webscte.co.in/">Click Hare To Go WBSCTE official Website</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -141,11 +141,11 @@
         <div class="carousel-wrapper">
             <div class="carousel" style="margin: 0 auto">
                 <div class="carousel-items">
-                    <img height="400px" src="img/gallery/faculty.jpg" alt="Faculty" />
+                    <img height="400px" src="img/gallery/college.jpg" alt="college" />
                     <div></div>
                 </div>
                 <div class="carousel-items">
-                    <img height="400px" src="img/gallery/gallery.jpg" alt="Gallery" />
+                    <img height="400px" src="img/gallery/log.jpg" alt="log" />
                     <div></div>
                 </div>
                 <div class="carousel-items">
@@ -168,36 +168,34 @@
             <div class="widgets-container">
                 <!-- Edit this section for important announcements.-->
                 <div class="alert alert-warning text-center">
-                    Institute invites applications for
-                    <a class="alert-link" href="http://pgadmissions.iiitvadodara.ac.in/">MTech and PhD programs -
-                        Academic Year 2016-17</a>
+                    For admissions to KALNA POLYTECHNIC Thorugh
+                    <a class="alert-link" href="https://exam.webscte.co.in/JEXPO-VOCLET">JEXPO and VOCLATE programs -
+                        Academic Year 2023-24</a>
                 </div>
 
                 <!-- Announcements -->
                 <div class="col-sm-4" id="announcements">
                     <div class="announcement-content">
                         <div class="widgets-title">
-                            <h2>Announcements</h2>
+                            <h3>WBSCTE Announcements</h3>
                         </div>
                         <ul id="announcement-list">
                             <li>
-                                For admissions to
-                                <b>M.Tech. and Ph.D. programs</b> visit:<br /><a
-                                    href="http://pgadmissions.iiitvadodara.ac.in" target="_blank">
-                                    PG-Admission-Portal.</a>
+                                For admissions to diploma by 
+                                <b>JEXPO and VOCLATE programs</b> visit:<br /><a
+                                    href="https://exam.webscte.co.in/JEXPO-VOCLET" target="_blank">
+                                    Online Application Portal</a>
                             </li>
                             <li>
-                                For queries related to <b>B.Tech. programs </b>contact us at:
+                                Application for Refund of Provisional Seat Booking Fee for the students who admitted through JEXPO-2021, JEXPO-2022, VOCLET-2021, VOCLET-2022 and PHARMACY-2021
                                 &nbsp; &nbsp;
                                 <span style="font-size: 12px; font-weight: bold; color: Black"><a
-                                        href="mailto:admissions@iiitvadodara.ac.in">admissions@iiitvadodara.ac.in</a></span>
+                                        href="https://exam.webscte.co.in/refund-upgradation-fee">Application for Refund of Provisional Seat Booking Fee</a></span>
                             </li>
                             <li>
-                                Government of India Schemes for Students' Welfare
-                                <a href="https://www.vidyalakshmi.co.in/Students/indexPopup"
-                                    target="_blank">www.vidyalakshmi.co.in </a><a
-                                    href="https://www.scholarships.gov.in/main.do" target="_blank">
-                                    www.scholarships.gov.in
+                                VERIFICATION RESULT OF DIPLOMA IN ENGINEERING & TECHNOLOGY (2ND & 4TH SEMESTERS) HELD IN NOVEMBER, 2022
+                                <a href="https://exam.webscte.co.in/studentverification/check-Result"
+                                    target="_blank">Checkout for VERIFICATION </a>
                                 </a>
                             </li>
                         </ul>
@@ -226,13 +224,13 @@
                                     <div class="date">
                                         <span>
                                             <!-- Day -->
-                                            <div class="day">9</div>
+                                            <div class="day">16</div>
                                             <!-- Month Short Form (first three letters) -->
-                                            <div class="month">Apr</div>
+                                            <div class="month">Jan</div>
                                         </span>
                                     </div>
                                     <!-- Event-Description -->
-                                    <div class="event-text">First Annual Institute Day</div>
+                                    <div class="event-text">Sawasati puja</div>
                                 </div>
                             </li>
                             <li>
@@ -241,13 +239,13 @@
                                     <div class="date">
                                         <span>
                                             <!-- Day -->
-                                            <div class="day">12</div>
+                                            <div class="day">18</div>
                                             <!-- Month Short Form (first three letters) -->
-                                            <div class="month">Mar</div>
+                                            <div class="month">Sep</div>
                                         </span>
                                     </div>
                                     <!-- Event-Description -->
-                                    <div class="event-text">Hackathon 2016</div>
+                                    <div class="event-text">BC-corma</div>
                                 </div>
                             </li>
                             <li>
@@ -313,8 +311,7 @@
                         </div>
                         <ul id="news-list">
                             <li>
-                                <a href="http://aviaryan.in" target="_blank">Mr. Avi Aryan</a>
-                                got selected in Google Summer of Code 2016.
+                                A student from ETC depertment was captchered with smart phone due to 3rd sem semester exam
                             </li>
                         </ul>
                         <div id="news-list-pagination">
