--- a/library.html
+++ b/library.html
@@ -94,7 +94,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="https://webscte.co.in/">Diploma</a></li>
+                                    <li><a href="https://webscte.co.in/">Click Hare To Go WBSCTE official Website</a></li>
                                 </ul>
                             </li>
                             <li>
