--- a/rti.html
+++ b/rti.html
@@ -89,7 +89,7 @@
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="https://webscte.co.in/">Diploma</a></li>
+                                        <li><a href="https://webscte.co.in/">Click Hare To Go WBSCTE official Website</a></li>
                                     </ul>
                                 </li>
                                 <li>
