--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="gallery.html">Photo Gallery</a></li>
-                                <li><a href="popupLogin page.html">Login</a></li>
+                                <li><a href="Dropdown.html">Login</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
